# kursovaya_rabota

./: README.md  pyproject.toml
utils/: abstract_class.py  hhru_class.py  main.py  save_class.py  sj_class.py  vacancy_class.py  vacancy_list_hhru.json  work_function.py
