[tool.poetry]
name = "kursovaya4_oop"
version = "0.1.0"
description = ""
authors = ["Aleksey Bykov <aleh126@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
